desktop-themes/BlackMATE/gtk-3.0/mate-applications.css
/* ... */
CajaWindow .scrollbar.button,
CajaWindow .scrollbar.button.horizontal,
CajaWindow .scrollbar.button.vertical,
CajaWindow .scrollbar.button:disabled,
CajaWindow .scrollbar.button.horizontal:disabled,
CajaWindow .scrollbar.button.vertical:disabled {
	background-image: none;
}

window.background>*>paned>box>statusbar>frame>box>label/*,
CajaWindow .floating-bar*/ {
	font: italic;
}
/*
CajaWindow .floating-bar.right,
CajaWindow .floating-bar.left {
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}
*/
/**** Notebook ***/

.caja-inactive-pane notebook {
	background-color: shade(@less_dark_color, 1.3);
	border-color: @less_dark_color;
}

.caja-inactive-pane notebook header.top tab:active {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 1.05),
	                                  shade(@less_dark_color, 1.16) 40%,
	                                  shade(@less_dark_color, 1.25) 70%,
	                                  shade(@less_dark_color, 1.3));
}


window.background>*>paned>box>paned.horizontal .vertical notebook tab {
	padding: 3px 0px;
}

window.background>*>paned>box>paned.horizontal .vertical .notebook tab .button.flat {
    border-image: none;
}

/* Caja places bar */
/* Disable this as it does not seem to change the default and the widget chain is dangerously short 
window.background>*>paned>box>paned>box>box>button.flat {
    border-style: none;
    border-image: url("assets/primary-toolbar-button-active-border-dark.svg") 3 / 3px stretch;
    border-radius: 3px;
    padding: 2px 5px;
}

window.background>*>paned>box>paned>box>box>button.flat:hover {
    border-image: none;
    border-radius: 3px;
    padding: 2px 5px;
}
*/
/**** Sidebar ***/

/* caja sidebar */
window.background*>paned>box>notebook>stack>scrolledwindow.frame treeview.view {
    background-color: shade(@theme_bg_color, 1.08);
}

window.background*>paned>box>notebook>stack>scrolledwindow{
		border-width: 0px;
}

/* moved eject button to left better for overlay scrollbars */
window.background*>paned>box>notebook>stack>scrolledwindow.frame treeview.view {
    padding: 0px 4px 0px 0px;
	border-width: 0px;
}

window.background*>paned>box>notebook>stack>scrolledwindow scrollbar button {
	color: transparent;
}

window.background*>paned>box>notebook>stack>scrolledwindow scrollbar button:hover {
	color: @theme_fg_color;
}


/**** Infos ***/

CajaWindow .question,
CajaWindow .info,
CajaTrashBar.info,
CajaXContentBar.info,
CajaQueryEditor.info {
	background-color: transparent;
}

CajaSearchBar.info {
	border-radius: 0px;
	background-color: @less_dark_color;
}

CajaWindow CajaQueryEditor .toolbar,
CajaWindow .notebook CajaQueryEditor .toolbar {
	background-image: none;
	background-color: transparent;
	padding: 5px 7px;
}

CajaSearchBar .entry,
CajaQueryEditor .toolbar .entry {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 0.2),
	                                  shade(@less_dark_color, 0.5) 10%,
	                                  @less_dark_color 50%,
	                                  shade(@less_dark_color, 1.5));
	box-shadow: inset 0 -3px alpha(@entry_shadow, 0.03),
	            inset 0 -2px alpha(@entry_shadow, 0.04),
	            inset 0 -1px alpha(@entry_shadow, 0.06);
}

CajaSearchBar .entry:focus,
CajaQueryEditor .toolbar .entry:focus {
	border-color: shade(@less_dark_color, 1.4);
	box-shadow: inset 0 -2px alpha(@entry_shadow, 0.04),
	            inset 0 -1px alpha(@entry_shadow, 0.06);
}

.caja-canvas-item,
EelEditableLabel.entry {
	border-radius: 4px;
}

/* view */
window.background>*>paned>box>paned>box>notebook>stack>box>box>scrolledwindow.frame .view .caja-canvas-item {
    color: @theme_fg_color;
}

window.background>*>paned>box>paned>box>notebook>stack>box>box>scrolledwindow.frame .view .caja-canvas-item:active,
window.background>*>paned>box>paned>box>notebook>stack>box>box>scrolledwindow.frame.view .caja-canvas-item:selected {
    color: @theme_selected_fg_color;
}

/**** Desktop Drawn ***/

window>*>box>box>box>scrolledwindow>.view .caja-canvas-item {
	color: @theme_fg_color;
    text-shadow: 1px 1px alpha (#000000, 0.8);
}

window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:active {
	color: @theme_text_color;
}

window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:selected {
	color: @theme_selected_fg_color;
}

window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:active,
window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:hover,
window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:selected {
	text-shadow: none;
}


/****************
 * Mate-Panel   *
 ****************/


/* let's started */
/* the panel bar itself */

.mate-panel-menu-bar {
    background-color: @theme_bg_color;
    background-image: none;
    /* normal panel */
    color: @theme_fg_color;
    /* transparent panel light desktop background*/
/*    color: @theme_selected_fg_color; */
    text-shadow: none;
}

/* workaround to avoid unwanted black frames if switching compositor on/off */
.mate-panel-menu-bar .window-frame.csd.popup {
    box-shadow: none;
}


.mate-panel-menu-bar menubar,
.mate-panel-menu-bar menubar menuitem,
.mate-panel-menu-bar togglebutton {
    border-image: none;
    border-color: transparent;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
}

/* panel grip */
.mate-panel-menu-bar.background {
    border-radius: 3px;
/* enable for making borders visible */
/*    box-shadow: inset  0px  1px shade (@theme_selected_bg_color, 1.3),
                inset  1px  0px shade (@theme_selected_bg_color, 1.3),
                inset -1px  0px shade (@theme_selected_bg_color, 1.3),
                inset  0px -1px shade (@theme_selected_bg_color, 1.3); */
}
/* ... */

